## Change log

### 1.1.4 (in Progress)
* Fix - Adding the list of Envira Gallery tags to the wp_kses_post allowed filter method.
* Dev - Added in WPForms Lite as a list of forms to choose for your enquiry.
* Fix - Fixed tours and destinations collapsible tabs on mobile issue.
* Dev - Added in the destinations to the Accommodation and Tour breadcrumbs

### 1.1.3
* Fix - Cleaning code to meet more Wordpress Standards

### 1.1.2
* Fix - Changing the "id" to avoid cached sites pulling through the same gallery for each destination
* Dev - Added in an option to disable the collapse function on single posts
* Dev - Updated "Tested up to" WordPress version
* Dev - Fixed archive excerpt display when there is not post content
* Dev - Renamed the Object abstract class to Frame
* Fix - Upgraded the mb_strtolower to strtolower for newer PHP versions.

### 1.1.1
* Fix - Removed the "prepare" statement from the destinations "filter_countries" function.
* Fix - Fixed extra spacing on Included and Not-Included items list
* Fix - Crop huge excerpts o archive and widget items.
* Fix - Fixed Post Type Widget specific IDs front-end
* Fix - TO Maps undefined function removed
* Dev - Added compatibility with LSX Videos
* Fix - Fixed PHP notice related to call is_singular() function


### 1.1.0
* New totally awesome version! The visual was fully redesigned
* Added compatibility with LSX 2.0
* Dev - New project structure
* Dev - UIX updated + Fixed issue with sub tabs click (settings)
* Dev - Added in a filter to call the Tours Featured image for the Departure Day.
* Dev - Added the accommodations room images to the pool of possible itinerary day images.
* Dev - Allowing the to_country_regions() to be ordered by the menu order or any other valid WP_Query order
* Fix - Fixed scripts/styles loading order
* Fix - Fixed many small issues

### 1.0.8
* Fix - LSX tabs working integrated with TO tabs (dashboard settings)
* Fix - Fixed admin styles (help and add-on pages)