@@ -5,6 +5,7 @@
 * Dev - Added in WPForms Lite as a list of forms to choose for your enquiry.
 * Fix - Fixed tours and destinations collapsible tabs on mobile issue.
 * Dev - Added in the destinations to the Accommodation and Tour breadcrumbs
+* Dev - Changed the widgets and shortcodes images sizes from 'lsx-thumbnail-single' to 'lsx-thumbnail-wide'
 
 ### 1.1.3
 * Fix - Cleaning code to meet more Wordpress Standards
